Avoid leaking a file handle on error opening the next file. From David Binderman in PR 50577.